# Hackathon-2-Phase-1

./: .gitignore  README.md  main.py  pyproject.toml
.claude/agents/: todo-app-reviewer.md
.specify/memory/: constitution.md
history/prompts/001-console-todo-app/: 1-create-todo-app-spec.spec.prompt.md  2-create-implementation-plan.plan.prompt.md  3-create-task-decomposition.tasks.prompt.md  4-complete-implementation.tasks.prompt.md
history/prompts/constitution/: 1-amend-project-constitution.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: todo-operations.md
src/cli/: console_app.py
src/models/: todo.py
src/services/: repository.py  todo_service.py
